-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.9.0
-
None
-
-
a13d84b56 (dev), adfc440fc (6.9), dc941f226 (tqtc/lts-6.8), 136fb1d75 (tqtc/lts-6.5)
I cannot use colons (":") in header values with QNetWorkReply::header() or QNetWorkReply::rawHeader() on the WASM platform. It seems to me that the RFCs allow this, but QT removes everything that follows the colon.
I've attached a small patch that fixes this for me.
| For Gerrit Dashboard: QTBUG-136812 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 645559,5 | wasm: Fix parsing HTTP header values that contain colon (:) | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 646697,2 | wasm: Fix parsing HTTP header values that contain colon (:) | 6.9 | qt/qtbase | Status: MERGED | +2 | 0 |
| 646738,2 | wasm: Fix parsing HTTP header values that contain colon (:) | tqtc/lts-6.8 | qt/tqtc-qtbase | Status: MERGED | +2 | 0 |
| 646749,2 | wasm: Fix parsing HTTP header values that contain colon (:) | tqtc/lts-6.5 | qt/tqtc-qtbase | Status: MERGED | +2 | 0 |