wasm: Fix parsing HTTP header values that contain colon (:)

According to RFC 7230 header values can contain colon(:). Fix
parsing HTTP headers to handle such cases correctly.

Fixes: QTBUG-136812
Pick-to: 6.5
Change-Id: I371342c5d84744e0427eb23fb1b648f8c0f0c9fe
Reviewed-by: Morten Johan Sørvig <morten.sorvig@qt.io>
(cherry picked from commit a13d84b56a2f02be71aca376ccdba39a7a38ef86)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit adfc440fc5dc2a782c0504d21dbda00d7fa24d1f)